Get everything working again, add Intel SVG logo

--- a/src/templates/email-header/headline/email-header.html
+++ b/src/templates/email-header/headline/email-header.html
@@ -9,7 +9,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link href='<%= baseUrl %>/assets/stylesheets/general/tile-pattern-fill.css' rel='stylesheet' />
+    <link href='//redhatbrand.github.io/RedHatTemplates/global-assets/stylesheets/general/tile-pattern-fill.css' rel='stylesheet' />
     <link type="text/css" href="<%= baseUrl %>/templates/email-header/headline/stylesheets/main.css" rel="stylesheet" />
     <link href='http://red-hat-overpass-fonts.s3.amazonaws.com/overpass.css' rel='stylesheet' />
 
@@ -62,7 +62,7 @@
             <img src="<%= baseUrl %>/assets/images/logos/rh-logo.svg" alt="Red Hat" />
           </div>
           <div class="intel">
-            <img src="<%= baseUrl %>//images/intel-logo.png" alt="intel" />
+            <img src="<%= baseUrl %>/assets/images/logos/intel-logo-white.svg" alt="intel" />
           </div>
         </div>
           
@@ -74,9 +74,9 @@
       <!-- /Design here -->
       
       <script type="text/javascript" charset="utf-8">
-        var redhatBrandPattern = '{{ brand-pattern }}';
+        var redhatBrandPattern = 'partners';
       </script>
-      <script src="<%=baseUrl%>/assets/javascripts/tile-pattern.js"></script>
+      <script src="//redhatbrand.github.io/RedHatTemplates/global-assets/javascripts/tile-pattern.js"></script>
     </main>
   </body>
 </html>
