--- a/src/templates/web-advertisement/logos-only/300x100.html
+++ b/src/templates/web-advertisement/logos-only/300x100.html
@@ -50,7 +50,7 @@ height: 100px
              <img src="<%= baseUrl %>/assets/images/logos/rh-logo.svg" alt="Red Hat" />
           </div>
           <div class="intel">
-            <img src="<%= baseUrl %>//images/intel-logo.png" alt="intel" />
+            <img src="<%= baseUrl %>/assets/images/logos/intel-logo-white.svg" alt="intel" />
           </div>
         </div>
           
