apply background to main

--- a/src/templates/social-media/logos-only/facebook-share.html
+++ b/src/templates/social-media/logos-only/facebook-share.html
@@ -16,6 +16,10 @@
 
     <style>
       body {
+        position: relative;
+        margin: 0;
+      }
+      main {
         background-image: 
           url('//redhatbrand.github.io/RedHatTemplates/global-assets/images/shapes/blue/grid-06-06.svg'),
           url('{{{ background-image }}}');
@@ -24,6 +28,13 @@
         background-blend-mode: multiply;
         background-size: 140% auto, cover;
         background-position: center center, center center;
+        overflow: hidden;
+        margin: 0;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
       }
     </style>
   </head>
