--- a/src/templates/web-advertisement/headline/300x100.html
+++ b/src/templates/web-advertisement/headline/300x100.html
@@ -12,6 +12,10 @@ height: 100px
  
     <style>
       body {
+        position: relative;
+        margin: 0;
+      }
+      main {
         background-image: 
           url('//redhatbrand.github.io/RedHatTemplates/global-assets/images/shapes/red/grid-00-00.svg'),
           url('{{{ background-image }}}');
@@ -20,6 +24,13 @@ height: 100px
         background-blend-mode: multiply;
         background-size: 150% auto, cover;
         background-position: top left, center center;
+        overflow: hidden;
+        margin: 0;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
       }
     </style>
   </head>
