--- a/src/templates/email-header/headline/email-header.html
+++ b/src/templates/email-header/headline/email-header.html
@@ -15,15 +15,26 @@
 
     <style>
       body {
-        background-image: 
-          url('//redhatbrand.github.io/RedHatTemplates/global-assets/images/shapes/red/grid-00-00.svg'),
-          url('//redhatbrand.github.io/RedHatTemplates/global-assets/images/shapes/blue/grid-12-12.svg'),
+        position: relative;
+        margin: 0;
+      }
+      main {
+        background-image:
+          url('http://redhatbrand.github.io/RedHatTemplates/global-assets/images/shapes/red/grid-00-00.svg'),
+          url('http://redhatbrand.github.io/RedHatTemplates/global-assets/images/shapes/blue/grid-12-12.svg'),
           url('{{{ background-image }}}');
 
         background-repeat: no-repeat;
         background-blend-mode: multiply;
         background-size: 50% auto, 70% auto, cover;
         background-position: top left, bottom right, center center;
+        overflow: hidden;
+        margin: 0;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
       }
     </style>
   </head>
