--- a/src/templates/social-media/headline/youtube-cover.html
+++ b/src/templates/social-media/headline/youtube-cover.html
@@ -15,6 +15,10 @@
 
     <style>
       body {
+        position: relative;
+        margin: 0;
+      }
+      main {
         background-image: 
           url('//redhatbrand.github.io/RedHatTemplates/global-assets/images/shapes/red/grid-00-00.svg'),
           url('//redhatbrand.github.io/RedHatTemplates/global-assets/images/shapes/blue/grid-12-12.svg'),
@@ -24,6 +28,13 @@
         background-blend-mode: multiply;
         background-size: 60% auto, 88% auto, cover;
         background-position: top left, bottom right, center center;
+        overflow: hidden;
+        margin: 0;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
       }
     </style>
   </head>
