--- a/src/templates/web-advertisement/logos-only/720x300.html
+++ b/src/templates/web-advertisement/logos-only/720x300.html
@@ -13,6 +13,10 @@ height: 300px
 
     <style>
       body {
+        position: relative;
+        margin: 0;
+      }
+      main {
         background-image: 
           url('{{{ background-image }}}');
 
@@ -20,6 +24,13 @@ height: 300px
         background-blend-mode: multiply;
         background-size: cover;
         background-position: center center;
+        overflow: hidden;
+        margin: 0;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
       }
     </style>
   </head>
