--- a/src/templates/web-advertisement/partnership-insight/336x280.html
+++ b/src/templates/web-advertisement/partnership-insight/336x280.html
@@ -13,6 +13,10 @@ height: 280px
  
     <style>
       body {
+        position: relative;
+        margin: 0;
+      }
+      main {
         background-image: 
           url('//redhatbrand.github.io/RedHatTemplates/global-assets/images/shapes/blue/grid-00-00.svg'),
           url('{{{ background-image }}}');
@@ -21,6 +25,13 @@ height: 280px
         background-blend-mode: multiply;
         background-size: 50% auto, cover;
         background-position: top left, center center;
+        overflow: hidden;
+        margin: 0;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
       }
     </style>
   </head>
