--- a/src/templates/email-header/logos-only/stylesheets/main.scss
+++ b/src/templates/email-header/logos-only/stylesheets/main.scss
@@ -57,7 +57,7 @@ body {
 
 .background-shapes.bottom {
   position: absolute;
-  bottom: 0;
+  bottom: -0.5em;
   right: 0;
   width: 60vw;
   height: 50vw;
