--- a/src/templates/social-media/logos-only/stylesheets/main.scss
+++ b/src/templates/social-media/logos-only/stylesheets/main.scss
@@ -14,8 +14,8 @@ body {
 
 .background-shapes.top {
   position: absolute;
-  top: -1em;
-  left: -1em;
+  top: 0;
+  left: 0;
   width: 65vw;
   height: 50vw;
   
@@ -36,8 +36,8 @@ body {
   position: absolute;
   bottom: 0;
   right: 0;
-  left: -0.5em;
-  top: -0.5em;
+  left: 0;
+  top: 0;
   width: 100%;
   height: auto;
   
@@ -57,7 +57,7 @@ body {
 
 .background-shapes.bottom {
   position: absolute;
-  bottom: -0.2em;
+  bottom: -0.5em;
   right: 0;
   width: 66vw;
   height: 50vw;
