--- a/src/templates/social-media/partnership-insight/stylesheets/main.scss
+++ b/src/templates/social-media/partnership-insight/stylesheets/main.scss
@@ -30,8 +30,8 @@ body {
   position: absolute;
   bottom: 0;
   right: 0;
-  left: -0.25em;
-  top: -0.5em;
+  left: 0;
+  top: 0;
   width: 81.5vw;
   height: 50vw;
   
@@ -51,7 +51,7 @@ body {
 
 .background-shapes.bottom {
   position: absolute;
-  bottom: 0;
+  bottom: -0.5em;
   right: 0;
   width: 71.5vw;
   height: 50vw;
